--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install:
 
 script:
   - vendor/bin/phpunit
-  - ./psalm --spirit
+  - ./psalm
 
 # Base test matrix (php/env)
 matrix:
@@ -69,7 +69,7 @@ jobs:
         - vendor/bin/phpunit --dump-xdebug-filter build/xdebug-filter.php
       script:
         - vendor/bin/phpunit --prepend build/xdebug-filter.php
-        - ./psalm
+        - ./psalm --with-spirit
       after_success:
         - travis_retry php vendor/bin/php-coveralls -v
 
